added Panel and Card

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,7 +3,7 @@ body {
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: green;
+    background-color: grey;
     font-size: 14px;
 }
 *{
