--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -5,4 +5,11 @@
   padding: 12px;
   margin-bottom: 8px;
   font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  & img{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+  }
 }
